# MLFF

./: .gitignore  environment.yml  key_check.py  npz2xyz.py  pyproject.toml
data/A01_75731/: A01_ethene_0p50fs_dynamic_filtered_state_3.extxyz  A01_ethene_0p50fs_dynamic_filtered_state_3.npz
data/A02_23630/: A02_propene_0p50fs_dynamic_filtered_state_3.extxyz
data/A03_53310/: A03_butene_grid_static.nc:Zone.Identifier
environments/: env_jax.yml  env_torch.yml
examples/: repulsion.py  train_so3kratACE.py  train_so3krates.py  train_so3krates_schzl.py  train_so3krates_shnsl.py
examples/configs/: A01.json  A03.json
examples/preprocessing/: filter_state_input_file_generator.py  nc2npz.py  schnitsel_preprocessor.py
examples/tests/: test_preprocessor.py
mlff/cAPI/: mlff_eval.py  mlff_input_processing.py  mlff_train_so3kratace.py  mlff_train_so3krates.py
mlff/data/: dataset.py
mlff/inference/: evaluation.py
mlff/md/: calculator.py
mlff/mdx/: simulate.py
mlff/nn/embed/: embed.py
mlff/nn/observable/: observable.py
mlff/sph_ops/: contract.py
mlff/training/: run.py  train_state.py
setup_env/: jax_setup.txt
tests/: test_model_invariance.py  test_so3krates.py
tests/test_data/: load.py
verification_scripts/: filter_state_input_file_generator.py  nc2extxyz.py  nc_key_check.py  test_jax_gpu.py  testing.ipynb
